--- a/layout7_1.html
+++ b/layout7_1.html
@@ -5,7 +5,7 @@
 	<title>layout7_1</title>
 	<style>
 		* {margin: 0;padding: 0;}
-		body {background-color: #fff}
+		body {background-color: #111}
 		#wrap {width: 1600px; margin: 0 auto;}
 		header {width: 100%; height: 150px; background-color: #b2ebf2;}
 		nav{width: 100%; height: 400px; background-color: #80deea ;}
